--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@ type="image/x-icon">
 type="image/x-icon"> {% endblock %}
 
 {% block navbar %}
+
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -21,11 +22,23 @@ type="image/x-icon"> {% endblock %}
             </button>
             <a class="navbar-brand" href="/">Flasky</a>
         </div>
-        <div class="navbar-collapse collapse"> <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li> </ul>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('auth.logout') }}">Sign Out</a></li>
+                {% else %}
+                <li><a href="{{ url_for('auth.login') }}">Sign In</a></li>
+                {% endif %}
+            </ul>
         </div>
+
+
     </div>
 </div>
+
 {% endblock %}
 
 {% block content %}
